--- a/index.html
+++ b/index.html
@@ -5,25 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namasthe React</title>
     <link rel="stylesheet" href="./index.css">
+    <!-- Google icons  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div id="root">
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-        <h1>shahnas</h1>
-
     </div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 </html>
